# OpenAI_TTS_GUI

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Agents.md  LICENSE  OpenAI_PSG.py  OpenAI_TTS-old.py  OpenAI_TTS.py  README.md  api_key.txt  cli.py  config.py  gui.py  installer.nsi  main.py  openai_tts.spec  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh  specs.md  tts.py  utils.py
.github/workflows/: build.yml  ci.yml  release.yml
Older_versions/V1/: OpenAI_TTS-old.py  README-old.md
Older_versions/V2/: OpenAI_TTS.py  README.md  api_key.txt
docs/decisions/: 001-architecture-restructure.md
scripts/: bench_all.bat  profile_split_concat_pyinstrument.bat  profile_split_concat_pyspy.bat  profile_tests_pyinstrument.bat  pyinstaller_entry.py  test_all.bat  test_min_cov80.bat  test_unit_only.bat
src/OpenAI_TTS_GUI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openai_tts_gui/: __init__.py  cli.py  config.py  errors.py  gui.py  main.py  tts.py  utils.py
src/openai_tts_gui/config/: __init__.py  app_settings.py  settings.py  theme.py
src/openai_tts_gui/core/: __init__.py  audio.py  ffmpeg.py  metadata.py  text.py
src/openai_tts_gui/gui/: __init__.py  _layout.py  dialogs.py  main_window.py  workers.py
src/openai_tts_gui/keystore/: __init__.py  _crypto.py  _storage.py
src/openai_tts_gui/presets/: __init__.py  _storage.py
src/openai_tts_gui/tts/: __init__.py  _compat.py  _service.py
tests/: conftest.py  fakes_tts_service.py  test_architecture.py  test_backward_compat.py  test_cli_argparse.py  test_cli_success.py  test_core_ffmpeg.py  test_gui_actions_qt.py  test_gui_smoke_qt.py  test_gui_workers_qt.py  test_import_boundaries.py  test_main_bootstrap.py  test_presets_storage.py  test_retry_backoff.py  test_smoke.py  test_tts_cleanup_behavior.py  test_tts_parallel_ordering.py  test_tts_rate_limit_behavior.py  test_tts_run_without_api.py  test_tts_sidecar_metadata.py  test_utils_io.py  test_utils_keyring_io.py  test_utils_sidecar_ffmpegparse.py  test_utils_split_text.py
tests/perf/: test_bench_split_concat.py
tools/: profile_split_concat.py
