[project]
name = "OpenAI_TTS_GUI"
version = "0.8.0"
description = "GUI for OpenAI's TTS"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "sm18lr88", email = "smgithub@fastmail.us" }]
urls = { Homepage = "https://github.com/sm18lr88/OpenAI_TTS_GUI" }
# Main production dependencies
dependencies = [
    "openai>=2.9,<3",
    "pyqt6>=6.10,<7",
    "keyring>=25,<26",
    "platformdirs>=4.5.1,<7",
]

[project.scripts]
openai-tts = "openai_tts_gui.cli:main"

# Standard location for all optional dependencies, including development tools
[project.optional-dependencies]
dev = [
  "pytest>=9.0,<10",
  "pytest-qt>=4.5,<5",
  "pytest-cov>=7.0,<8",
  "pytest-benchmark>=5.2,<6",
  "pytest-mock>=3.15,<4",
  "pytest-timeout>=2.4,<3",
  "pytest-xdist>=3.8,<4",
  "ruff>=0.14,<0.15",
  "black>=25.11,<26",
  "mypy>=1.19,<2",
  "pyinstaller>=6.17,<7",
  "pyinstrument>=5.1,<6",
  "py-spy>=0.4.1,<0.5",
  "ty>=0.0.1a29,<0.0.2; python_version >= '3.12'",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- Tool Configurations ---

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --import-mode=importlib" # importlib mode is often more robust
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","UP","B","SIM"] # A good, modern default set

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
